5.0a4 -> 5.0b1:
    - afb: pass level on, to %{__lzma}.
    - jbj: revert binary search, todo++.
    - jbj: using tagValue instead permits queries of arbitrary tags.
    - jbj: do binary, not linear, search for tag name/type/value.
    - jbj: lazy arbitrary tag array initialization in rpmTags methods instead.
    - jbj: eliminate hard-wired static nameBuf for tag strings.

5.0a3 -> 5.0a4:
    - rse: provide RPM version in API via macros RPM_{VERSION,TIMESTAMP,VENDOR} and functions rpm_{version,timestamp,vendor}
    - jbj: pkgio: hdlist readers need RPMRC_NOTFOUND EOF indicator.
    - jbj: pkgio: drill in sufficient debugging to sort per/python I/O issues.
    - jbj: re-add symbols for perl "make test". hmm, headerRead failure todo++.
    - jbj: parse arbitrary tags permitted by _arbitrary_tags white list.
    - jbj: fix: renumber rpmParseState_e to avoid rpmRC error returns.
    - rpm.org: remove unnecessary includes.
    - jbj: stub in arbitrary tag methods.
    - jbj: fix: ditto, for *.src.rpm as well.
    - jbj: fix: RPMTAG_BUILDTIME is type RPM_UINT32_TYPE, not RPM_STRING_TYPE.
    - jbj: fix: getBuildTime returns uint32_t *, not uint32_t.
    - jbj: rpmbuild: more memory leak plugging.
    - jbj: rpmbuild: plug some memory leaks.
    - jbj: fix: return 0, not -1, with unsigned changes as error.
    - jbj: add HEADERGET_NOEXTENSION disabler, kill off headerGetEntry.
    - jbj: 1 down, 2 to go, to get rid of headerGetEntry.
    - jbj: limit headerGetEntry usage to -lrpmdb only.
    - jbj: Eliminate header.h and hdrinline.h.
    - jbj: insure that HE_t in headerGet/headerNext is initialized sanely.
    - jbj: python: lose rpmMergeHeaderFoo methods.
    - jbj: eliminate headerFreeData, w00t!, just free all tag data.
    - jbj: finalize headerInit/headerNext/headerFini, add to the ABI.
    - jbj: include <header.h> only where needed, doco remaining destruction.
    - jbj: finalize headerMod, add to the ABI, remove HME_t goop.